overflow causing issues with recaptchav2 & check boxes

--- a/BootstrapSample/Addons/_Skins/BootstrapSkin/Skin.scss
+++ b/BootstrapSample/Addons/_Skins/BootstrapSkin/Skin.scss
@@ -203,7 +203,7 @@ label {/* Bold labels are a bit harsh */
             width:auto;
         }
         .t_vals {
-            overflow: auto;
+            /*overflow: auto;*/
             input[type='text'].yt_text80 {
                 width:100%;
             }
