--- a/YetaWFSkin/Addons/_Skins/YetaWFSkin/Skin.scss
+++ b/YetaWFSkin/Addons/_Skins/YetaWFSkin/Skin.scss
@@ -195,7 +195,7 @@ label {/* Bold labels are a bit harsh */
             width:auto;
         }
         .t_vals {
-            overflow: auto;
+            /*overflow: auto;*/
             input[type='text'].yt_text80 {
                 width:100%;
             }
